# beauty

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: simple-server.cpp
include/beauty/: HTTPClient.hpp  Request.hpp  Response.hpp  session.h
src/: HTTPClient.cpp  beauty.cpp  session.cpp
